header ready, main need adaptation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Slider-swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <!-- Slider-swiper -->
-    <title>50-partners</title>
+    <title>Верховинська Хата</title>
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
@@ -16,21 +16,16 @@
       <div class="header_wrapper mycontainer">
         <nav class="navbar">
           <a href="index.html" class="logo_wrapper">
-            <img src="img/header/main-logo.png" alt="logo" class="main-logo" />
+            <img src="img/logo/logo.webp" alt="logo" class="main-logo" />
           </a>
-
+          <a href="tel:+380955521215" class="phone_call">Зателефонувати</a>
           <ul class="navbar_menu">
-            <li><p class="nav_elem" href="" onclick="scrollToBrands()">Brands</p></li>
-            <li><p class="nav_elem" href="#" onclick="scrollToAdvantages()">Advantages</p></li>
-            <li><p class="nav_elem" href="#" onclick="scrollToTestimonials()">Testimonials</p></li>
-            <li><p class="nav_elem" href="#" onclick="scrollToContacts()">Contacts</p></li>
-            <li><a class="nav_elem" href="terms-and-conditions.html">Terms and Conditions</a></li>
-            <li><a class="nav_elem" href="privacy-policy.html">Privacy Policy</a></li>
+            <li><p class="nav_elem" href="" onclick="scrollToBrands()">Головна</p></li>
+            <li><p class="nav_elem" href="#" onclick="scrollToTestimonials()">Послуги</p></li>
+            <li><p class="nav_elem" href="#" onclick="scrollToContacts()">Галерея</p></li>
+            <li><a class="nav_elem" href="#">Контакти</a></li>
           </ul>
-          <div class="header_button_pair">
-            <button class="main_button">Sign in</button>
-            <button class="main_button fill_button">Sign Up</button>
-          </div>
+
           <div class="burger">
             <div class="burger_space" id="burger">
               <span class="stick"></span>
@@ -42,30 +37,43 @@
         <div class="popup" id="popup">
           <div class="popup_textblock" id="popupSlide">
             <ul class="navbar_menu_mobile">
-              <li><p class="nav_elem_mobile" href="" onclick="scrollToBrands()">Brands</p></li>
+              <li><p class="nav_elem_mobile" href="" onclick="scrollToBrands()">Головна</p></li>
               <li>
-                <p class="nav_elem_mobile" href="" onclick="scrollToAdvantages()">Advantages</p>
+                <p class="nav_elem_mobile" href="" onclick="scrollToAdvantages()">Послуги</p>
               </li>
               <li>
-                <p class="nav_elem_mobile" href="" onclick="scrollToTestimonials()">Testimonials</p>
+                <p class="nav_elem_mobile" href="" onclick="scrollToTestimonials()">Галерея</p>
               </li>
-              <li><p class="nav_elem_mobile" href="" onclick="scrollToContacts()">Contacts</p></li>
-              <li>
-                <a class="nav_elem_mobile" href="terms-and-conditions.html">Terms and Conditions</a>
+              <li><p class="nav_elem_mobile" href="" onclick="scrollToContacts()">Контакти</p></li>
+              <li class="phone_call_mob">
+                <a href="tel:+380955521215" class="phone_call_mob_number">Зателефонувати</a>
               </li>
-              <li><a class="nav_elem_mobile" href="privacy-policy.html">Privacy Policy</a></li>
-              <div class="header_button_pair mob_menu_buttons">
-                <button class="main_button mob_menu_button button_background_change">
-                  Sign in
-                </button>
-                <button class="main_button fill_button mob_menu_button">Sign Up</button>
-              </div>
             </ul>
           </div>
         </div>
       </div>
     </header>
-
+    <section class="main_photo">
+      <div class="main_photo_wrapper">
+        <img class="main_image" src="img/main/main-photo.webp" alt="main photo" />
+        <div class="main_photo_content_wrapper">
+          <img class="content_image" src="img/main/main-house-image.jpg" alt="house main photo" />
+          <div class="content_text">
+            <img class="main_image_logo" src="img/logo/logo-removebg-preview.png" alt="logo" />
+            <div class="advantages">
+              <p>Зручне розташування</p>
+              <p>Максимальний комфорт</p>
+              <p>Приватність і спокій</p>
+              <!-- <p>Бюджетна ціна</p>
+              <p>Зручна парковка</p>
+              <p>Оренда велосипедів</p>
+              <p>Можливий трансфер</p> -->
+              <p>Відмінні відгуки</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer>
       <div class="mycontainer footer_container">
         <div class="logo_copy">
