ready adaptive main

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         </div>
       </div>
     </section>
+    <section class="adv_services"></section>
     <footer>
       <div class="mycontainer footer_container">
         <div class="logo_copy">
