--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     </footer>
 
     <script src="js/script.js"></script>
-    <!-- Swiper JS -->
+    <!-- Swiper JS connect -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <!-- Swiper JS -->
+    <!-- Swiper JS connect-->
     <!-- Initialize Swiper -->
     <script>
       var swiper = new Swiper('.mySwiper', {
