adv, serv section ready

--- a/index.html
+++ b/index.html
@@ -74,7 +74,25 @@
         </div>
       </div>
     </section>
-    <section class="adv_services"></section>
+    <section class="adv_services">
+      <div class="adv_services_wrapper">
+        <div class="adv_services_advantages">
+          <p class="title_subtext">Переваги</p>
+          <p class="adv">Зручне розташування</p>
+          <p class="adv">Безкоштовний Wi-Fi</p>
+          <p class="adv">Зручна парковка</p>
+          <p class="adv">Дружній власник</p>
+          <p class="adv">Гнучкість у розміщенні</p>
+        </div>
+        <div class="adv_services_services">
+          <p class="title_subtext">Додаткові послуги</p>
+          <p class="serv">Сніданки</p>
+          <p class="serv">Оренда велосипедів</p>
+          <p class="serv">Трансфер</p>
+          <p class="serv">Екскурсії</p>
+        </div>
+      </div>
+    </section>
     <footer>
       <div class="mycontainer footer_container">
         <div class="logo_copy">
