--- a/index.html
+++ b/index.html
@@ -98,16 +98,58 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="img/galary/1.jpg" />
+            <img class="galary_img" src="img/galary/1.jpg" />
           </div>
           <div class="swiper-slide">
-            <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+            <img class="galary_img" src="img/galary/2.jpg" />
           </div>
           <div class="swiper-slide">
-            <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+            <img class="galary_img" src="img/galary/3.jpg" />
           </div>
           <div class="swiper-slide">
-            <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+            <img class="galary_img" src="img/galary/4.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/5.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/6.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/7.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/8.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/9.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/10.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/11.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/12.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/13.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/14.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/15.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/16.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/17.jpg" />
+          </div>
+          <div class="swiper-slide">
+            <img class="galary_img" src="img/galary/18.jpg" />
           </div>
         </div>
         <div class="swiper-button-next"></div>
@@ -142,7 +184,7 @@
       <div class="mycontainer footer_container">
         <div class="logo_copy">
           <img src="img/logo/logo-removebg-preview.png" alt="footer logo" class="footer_logo" />
-          <p class="footer_copyright">© Verkhovynska Khata, 2023</p>
+          <p class="footer_copyright">© Verkhovynska Khata, 2024</p>
         </div>
         <a href="tel:+380955521215" class="phone_call_mob_number">Зателефонувати</a>
       </div>
@@ -165,6 +207,8 @@
           el: '.swiper-pagination',
           clickable: true,
         },
+        loop: true,
+        autoplay: true,
       });
     </script>
     <!-- Initialize Swiper change -->
