--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="img/logo/mtn.svg" type="image/x-icon" />
     <!-- Slider-swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Slider-swiper -->
     <script src="https://kit.fontawesome.com/fbceaed2ac.js" crossorigin="anonymous"></script>
     <title>Верховинська Хата</title>
@@ -60,22 +61,28 @@
         <div class="main_photo_content_wrapper">
           <img class="content_image" src="img/main/main-house-image.jpg" alt="house main photo" />
           <div class="content_text">
-            <img class="main_image_logo" src="img/logo/logo-removebg-preview.png" alt="logo" />
+            <img
+              class="main_image_logo"
+              data-aos="fade-up"
+              data-aos-duration="1200"
+              src="img/logo/logo-removebg-preview.png"
+              alt="logo"
+            />
             <div class="advantages">
-              <p>Зручне розташування</p>
-              <p>Максимальний комфорт</p>
-              <p>Приватність і спокій</p>
+              <p data-aos="fade-up" data-aos-duration="1200">Зручне розташування</p>
+              <p data-aos="fade-up" data-aos-duration="1200">Максимальний комфорт</p>
+              <p data-aos="fade-up" data-aos-duration="1200">Приватність і спокій</p>
               <!-- <p>Бюджетна ціна</p>
               <p>Зручна парковка</p>
               <p>Оренда велосипедів</p>
               <p>Можливий трансфер</p> -->
-              <p>Відмінні відгуки</p>
+              <p data-aos="fade-up" data-aos-duration="1200">Відмінні відгуки</p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="adv_services" id="services">
+    <section data-aos="fade-up" class="adv_services" id="services">
       <div class="adv_services_wrapper">
         <div class="adv_services_advantages">
           <p class="title_subtext">Переваги</p>
@@ -94,7 +101,7 @@
         </div>
       </div>
     </section>
-    <section class="gallery" id="gallery">
+    <section data-aos="fade-up" class="gallery" id="gallery">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -157,7 +164,7 @@
         <div class="swiper-pagination"></div>
       </div>
     </section>
-    <section class="contacts" id="contacts">
+    <section data-aos="fade-up" class="contacts" id="contacts">
       <div class="contacts_wrapper">
         <div class="contacts_map">
           <iframe
@@ -195,6 +202,10 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <!-- Swiper JS connect-->
     <!-- Initialize Swiper -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script>
       var swiper = new Swiper('.mySwiper', {
         spaceBetween: 30,
